--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,6 +7,7 @@
 <ion-content padding>
   <h2>Welcome to Ionic!</h2>
   <p>
+    {{'show_email' | translate}}
     This starter project comes with simple tabs-based layout for apps
     that are going to primarily use a Tabbed UI.
   </p>
